--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "tag-guru",
-  "displayName": "Tag guru",
+  "displayName": "TagGuru",
   "version": "0.0.1",
-  "description": "A basic Plasmo extension.",
+  "description": "一个标签管理工具，可以降低内存使用.",
   "author": "Plasmo Corp. <foss@plasmo.com>",
   "scripts": {
     "dev": "plasmo dev",
@@ -10,9 +10,14 @@
     "package": "plasmo package"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.0",
+    "@plasmohq/storage": "^1.9.3",
     "plasmo": "0.88.0",
+    "antd": "^5.14.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+        "sharp": "^0.33.2",
+    "sync-promise": "^1.1.0"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "4.1.1",
@@ -24,6 +29,7 @@
     "typescript": "5.3.3"
   },
   "manifest": {
+    "default_locale": "en",
     "host_permissions": [
       "https://*/*"
     ]
